Basic layout done :smiley:

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,38 +1,114 @@
-.container-fluid.mx-0.px-0
-  %nav#mainNav.navbar.navbar-expand-md.navbar-light.bg-light.fixed-top
-    %a.navbar-brand{href: "#"} KrishiGuru
-    %button.navbar-toggler{"aria-controls" => "navbarResponsive", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarResponsive", "data-toggle" => "collapse", "type" => "button"}
-      %span.navbar-toggler-icon
-    #navbarResponsive.collapse.navbar-collapse
-      %ul.navbar-nav.ml-auto
-        %li.nav-item
-          %a.nav-link.active{href: "#about-us"} About Us
-        %li.nav-item
-          %a.nav-link{href: "#motivation"} Motivation
-        %li.nav-item
-          %a.nav-link{href: "#knowledgebase"} Knowledgebase
-        %li.nav-item
-          %a.nav-link{href: "#supply-chain"} Supply Chain
-        %li.nav-item
-          %a.nav-link{href: "#contact-us"} Contact Us
-  %content{"data-spy"=> "scroll", "data-target"=> "#mainNav", "style"=> "position:relative;"}
-    #about-us
-      .padded-content
-        .text-justify.text-center
-          Lorem ipsum dolor sit
-    #motivation.active
-      .padded-content
-        .text-justify.text-center
-          Lorem ipsum dolor sit
-    #knowledgebase
-      .padded-content
-        .text-justify.text-center
-          Lorem ipsum dolor sit
-    #supply-chain
-      .padded-content
-        .text-justify.text-center
-          Lorem ipsum dolor sit
-    #contact-us
-      .padded-content
-        .text-justify.text-center
-          Lorem ipsum dolor sit
+%nav#mainNav.navbar.navbar-expand-md.navbar-light.bg-light.fixed-top
+  %a.navbar-brand{href: "#"} KrishiGuru
+  %button.navbar-toggler{"aria-controls" => "navbarResponsive", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarResponsive", "data-toggle" => "collapse", "type" => "button"}
+    %span.navbar-toggler-icon
+  #navbarResponsive.collapse.navbar-collapse
+    %ul.navbar-nav.ml-auto
+      %li.nav-item
+        %a.nav-link.active{href: "#about-us"} About Us
+      %li.nav-item
+        %a.nav-link{href: "#motivation"} Motivation
+      %li.nav-item.dropdown
+        %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"} Services
+        .dropdown-menu
+          %a.dropdown-item{:href => "#"} Weather
+          .dropdown-divider
+          %a.dropdown-item{:href => "#"} Market
+          .dropdown-divider
+          %a.dropdown-item{:href => "#"} News
+          .dropdown-divider
+          %a.dropdown-item{:href => "#"} Guide
+          .dropdown-divider
+          %a.dropdown-item{:href => "#"} Finance
+      %li.nav-item
+        %a.nav-link{href: "#blog"} Blog
+      %li.nav-item
+        %a.nav-link{href: "#contact-us"} Contact Us
+%content{"data-spy"=> "scroll", "data-target"=> "#mainNav", "style"=> "position:relative;"}
+  #about-us.padded-content
+    %h1.text-justify.text-center
+      About Us
+
+  #weather.padded-content
+    .row
+      .col-md-6.col-sm-12
+        %h2.text-center Weather this week
+        %hr
+        Weather info goes here
+      .col-md-6.col-sm-12
+        Weather description goes here
+        %a{href: "#"}
+          More on Weather
+
+  %hr
+  #market.padded-content{style: "padding-top: 20px"}
+    .row
+      .col-md-6.col-sm-12
+        %h2.text-center Market
+        %hr
+        %img.card-img-bottom{:alt => "a local fruit vendor", :src => "#{image_url('market')}", height: 300}
+      .col-md-6.col-sm-12
+        Market
+        %a{href: "#"}
+          More about market
+
+  %hr
+  #news.padded-content{style: "padding-top: 20px"}
+    .row
+      .col-md-6.col-sm-12
+        All News here
+        %a{href: "#"}
+          More News
+      .col-md-6.col-sm-12
+        %h2.text-center News
+        %hr
+        %img.card-img-bottom{:alt => "Illustrative image of a man reading newspaper", :src => "#{image_url('news')}", height: 300}
+
+  %hr
+  #guides.padded-content{style: "padding-top: 20px"}
+    .row
+      .col-md-6.col-sm-12
+        %h2.text-center Guides
+        %hr
+        %img.card-img-bottom{:alt => "book shelf with a lot of books", :src => "#{image_url('guides')}", height: 300}
+      .col-md-6.col-sm-12
+        Guides
+        %a{href: "#"}
+          More Guides
+
+  %hr
+  #finance.padded-content{style: "padding-top: 20px"}
+    .row
+      .col-md-6.col-sm-12
+        Finance
+        %a{href: "#"}
+          More finance options
+      .col-md-6.col-sm-12
+        %h2.text-center Finance
+        %hr
+        %img.card-img-bottom{:alt => "50 Rupee note", :src => "#{image_url('finance')}", height: 300}
+
+  %hr
+  #blog.padded-content{style: "padding-top: 20px"}
+    .row
+      .col-md-6.col-sm-12
+        %h2.text-center Blogs
+        %hr
+        %img.card-img-bottom{:alt => "a work  desk", :src => "#{image_url('blog')}", height: 300}
+      .col-md-6.col-sm-12
+        Blogs
+        %a{href: "#"}
+          Read more
+  :javascript
+    navigator.permissions.query({name:'geolocation'}).then(function(result) {
+      if (result.state === 'granted') {
+        navigator.geolocation.getCurrentPosition(
+        function(position){
+          console.log(position)
+        })
+      } else if (result.state === 'prompt') {
+        navigator.geolocation.reauest('')
+        alert('Not Granted')
+      }
+      // Don't do anything if the permission was denied.
+    });
