--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,15 +21,15 @@
                   %hr
                   %ul.list-unstyled
                     %li
-                      %a{:href => "#"} Weather
+                      %a{:href => weather_path} Weather
                     %li
-                      %a{:href => "#"} Market
+                      %a{:href => market_index_path} Market
                     %li
-                      %a{:href => "#"} News
+                      %a{:href => news_index_path} News
                     %li
-                      %a{:href => "#"} Guides
+                      %a{:href => guides_path} Guides
                     %li
-                      %a{:href => "#"} Finance
+                      %a{:href => finance_index_path} Finance
                     %li
                       %a{:href => "#"} Blog
             .col-md-4.col-sm-12
@@ -39,17 +39,15 @@
                   %hr
                   %ul.list-unstyled
                     %li
-                      %a{:href => "#"} Website Tutorial
+                      %a{:href => "/website_tutorial"} Website Tutorial
                     %li
-                      %a{:href => "#"} Accessibility
+                      %a{:href => "/disclaimer"} Disclaimer
                     %li
-                      %a{:href => "#"} Disclaimer
+                      %a{:href => "/privacy_policy"} Privacy Policy
                     %li
-                      %a{:href => "#"} Privacy Policy
+                      %a{:href => "/sitemap.xml"} Sitemap
                     %li
-                      %a{:href => "#"} Sitemap
-                    %li
-                      %a{:href => "#"} FAQs
+                      %a{:href => "/faqs"} FAQs
             .col-md-4.col-sm-12
               .card{style: "height: 250px;"}
                 .card-body
