--- a/app/views/guides/index.html.haml
+++ b/app/views/guides/index.html.haml
@@ -1,1 +1,7 @@
-Guides index
+.padded-content
+  %h1 Krishi Guides
+  - @items.each do |item|
+    %h3= item.title
+    %h5= item.sub_title
+    %p= item.peek
+    =link_to "Read full story", guide_path(item)
