--- a/app/views/news/index.html.haml
+++ b/app/views/news/index.html.haml
@@ -1,1 +1,7 @@
-News index
+.padded-content
+  %h1 In News
+  - @items.each do |item|
+    %h3= item.title
+    %h5= item.sub_title
+    %p= item.peek
+    =link_to "Read full story", news_path(item)
