--- a/app/views/weather/index.html.haml
+++ b/app/views/weather/index.html.haml
@@ -1,1 +1,15 @@
-Weather index
+#weather.padded-content
+  %h2 Weather
+  %hr
+  .row
+    #weather0.col-md-6.col-sm-12
+    #weather1.col-md-6.col-sm-12
+  .row{style: "padding-top: 20px"}
+    #weather2.col-md-6.col-sm-12
+    #weather3.col-md-6.col-sm-12
+  .row{style: "padding-top: 20px"}
+    #weather4.col-md-6.col-sm-12
+    #weather5.col-md-6.col-sm-12
+  .row{style: "padding-top: 20px"}
+    #weather6.col-md-6.col-sm-12
+    #weather7.col-md-6.col-sm-12
