--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,8 @@
 %content
   #about-us.padded-content
-    %h1.text-justify.text-center
-      About Us
-    %p Green Innovators is a social enterprise that aims to improve farming prospects and awareness in India to reduce the high suicide rates of farmers and save the lives of farmers in the future.
-    %p Their answer to this problem is a web and mobile app which can provide farmers with up-to-date, relevant information on farming techniques, weather, market prices, and connect them to suppliers and agricultural experts, to help their farming businesses thrive.
+    %div
+      %h1.text-justify.text-center{style:"font-size: 28px;"} KrishiGuru is a social enterprise that aims to improve farming prospects and awareness in India, to reduce the high suicide rates of farmers, and save the lives of farmers in the future.
+      %p.text-justify.text-center Our answer to this problem is a web application which can provide farmers with up-to-date, relevant information on farming techniques, weather, market prices, and connect them to suppliers and agricultural experts, to help their farming businesses thrive.
 
   #weather.padded-content
     %h2 Weather
